Removed unnecessary line in build.gradle