@@ -33,7 +33,6 @@ dependencies {
 }
 
 test {
-    jvmArgs ["--add-opens java.base/java.lang=ALL-UNNAMED"]
     finalizedBy jacocoTestReport
 }
 
